- fix analyzer warnings